--- a/quiz/templates/flashcards.html
+++ b/quiz/templates/flashcards.html
@@ -1,5 +1,58 @@
 {% load static %}
 <!DOCTYPE html>
+<html>
+<head>
+    <meta charset='utf-8'>
+    <meta http-equiv='X-UA-Compatible' content='IE=edge'>
+    <title>Flashcards</title>
+    <meta name='viewport' content='width=device-width, initial-scale=1'>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
+    <link rel="stylesheet" href="{% static 'css/style.css' %}">
+    <!-- <link rel='stylesheet' type='text/css' media='screen' href='main.css'> -->
+    <!-- <script src="{% static 'main.js' %}"></script> -->
+    
+</head>
+<body>
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#">UK<span style="color: red">test</span> </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="#">Flashcards</a>
+                    </li>        
+                </ul>
+            </div>
+        </div>
+    </nav>   
+    <div class="d-flex justify-content-center align-items-top vh-100">
+        <div class="flip-card" id="flashcard">
+            <div class="flip-card-inner" id="flip-btn">
+            <!-- Front -->
+            <div class="card text-center p-4 flip-card-front">
+                <h5 class="card-title">Question</h5>
+                <div class="card-text" id="question"></div>
+            </div>
+            <!-- Back -->
+            <div class="card text-center p-4 flip-card-back bg-primary text-white">
+                <h5 class="card-title">Answer</h5>
+                <div class="card-text" id="answer"></div>
+            </div>
+            </div>
+            <button class="btn btn-secondary flex-fill ms-2" id="next-btn">Próxima</button>
+        </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
+    {{ questions_json|json_script:"flashcards-data" }}
+    <script src="{% static 'js/flashcards.js' %}"></script>
+</body>
+</html>
+
+
+
+<!-- <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -52,4 +105,4 @@
     window.onload = function() { showFlashcard(current); };
 </script>
 </body>
-</html>
+</html> -->
