--- a/static/css/style.css
+++ b/static/css/style.css
@@ -3,7 +3,7 @@
 
 .flip-card {
   perspective: 1000px;
-  width: 80%;
+  width: 100%;
   height: 200px;
   cursor: pointer;
 }
@@ -26,4 +26,6 @@
 }
 .flip-card-back {
   transform: rotateY(180deg);
+  background-color: chocolate; /* Altere para a cor desejada */
+  color: #fff; /* Para texto branco */
 }
