--- a/quiz/templates/categories.html
+++ b/quiz/templates/categories.html
@@ -1,20 +1,28 @@
 {% extends "base.html" %}
 {% load static %}
 
-
 {% block content %}
-<h1>Study by Category</h1>
-<div class="row">
-  {% for category in categories %}
-  <div class="col-md-4 mb-3">
-    <div class="card">
-      <div class="card-body">
-        <h5 class="card-title">{{ category.name }}</h5>
-        <p>{{ category.num_questions }} questions</p>
-        <a href="{% url 'study_cards' category.id %}" class="btn btn-primary">Study</a>
-      </div>
+<div class="container text-center">
+  <div class="row">
+    <div class="col">
+      <h1>Study by Category</h1>
     </div>
   </div>
-  {% endfor %}
+  <div class="row">
+    <div class="list-group text-start mt-3">
+      {% for category in categories %}
+        <a href="{% url 'study_cards' category.id %}" class="list-group-item  " aria-current="true">
+          <div class="d-flex w-100 justify-content-between">
+            <h5 class="mb-1">{{ category.name }}</h5>
+            <!-- <small>3 days ago</small> -->
+          </div>
+          <p class="mb-1">{{ category.num_questions }} questions</p>
+          <!-- <small>{{ category.num_questions }} questions</small> -->
+        </a>
+      {% endfor %}
+    </div>    
+  </div>
 </div>
 {% endblock %}
+
+
