--- a/quiz/templates/study_cards.html
+++ b/quiz/templates/study_cards.html
@@ -1,31 +1,56 @@
 {% extends "base.html" %}
 {% load static %}
 {% block content %}
-<h2>{{ category.name }} - Study Cards</h2>
 
-<div class="card mb-3">
-  <div class="card-body">
-    <h5>{{ question.text }}</h5>
-    <form method="post">
-      {% csrf_token %}
-      {% for choice in question.choices.all %}
-      <div class="form-check">
-       <input type="{{ input_type }}" name="selected_choices" value="{{ choice.id }}" id="choice{{ forloop.counter }}">
-        <label for="choice{{ forloop.counter }}">{{ choice.text }}</label>
+
+<div class="container">
+  <div class="row">
+    <div class="col">
+      <h2>{{ category.name }}</h2>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col">
+      <div class="card mb-3">
+        <div class="card-body">
+          <h5>{{ question.text }}</h5>
+          <form method="post">
+            {% csrf_token %}
+            {% for choice in question.choices.all %}
+            <div class="form-check">
+              <ul class="list-group">
+                <li class="list-group-item
+                  {% if result %}
+                    {% if choice.is_correct %} bg-success text-white
+                    {% elif choice.id|stringformat:"s" in selected_ids %} bg-danger text-white
+                    {% endif %}
+                  {% endif %}
+                ">
+                  <input class="btn-check" autocomplete="off" type="checkbox" name="selected_choices" value="{{ choice.id }}" id="choice{{ forloop.counter }}"
+                    {% if result and choice.id|stringformat:"s" in selected_ids %} checked {% endif %}>
+                  <label class="btn w-100 text-start" for="choice{{ forloop.counter }}">{{ choice.text }}</label>
+                </li>
+              </ul>
+            </div>
+            {% endfor %}
+            <button type="submit" class="btn btn-success mt-2">Check Answer</button>
+          </form>
+        </div>
       </div>
-      {% endfor %}
-      <button type="submit" class="btn btn-success mt-2">Check Answer</button>
-    </form>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col">
+      {% if result %}
+        <div class="alert alert-info mt-2">
+          {% if result.is_correct %}✅ Correct!{% else %}❌ Incorrect{% endif %}
+          <br>
+          Correct: {{ result.correct_choices_text }}
+          <br>
+          Explanation: {{ result.explanation }}
+        </div>
+      {% endif %}
+    </div>
   </div>
 </div>
-
-{% if result %}
-<div class="alert alert-info mt-2">
-  {% if result.is_correct %}✅ Correct!{% else %}❌ Incorrect{% endif %}
-  <br>
-  Correct: {{ result.correct_choices_text }}
-  <br>
-  Explanation: {{ result.explanation }}
-</div>
-{% endif %}
 {% endblock %}
