--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,3 +1,25 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap');
+
+
+body {
+  background-color: #EAEAEA;
+  font-family: 'Roboto', sans-serif;
+
+}
+
+.category-title{
+  font-size: 2rem;
+  font-weight: 700;
+  margin-bottom: 1rem;
+  
+}
+
+.question-text{
+  font-size: 1.5rem;
+  font-weight: 500;
+  margin-bottom: 1rem;
+}
+
 
 /* Flashcard */
 
