--- a/quiz/templates/base.html
+++ b/quiz/templates/base.html
@@ -14,7 +14,7 @@
 <body>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">UK<span style="color: red">test</span> </a>
+            <a class="navbar-brand" href="#">Life in the <span style="color: var(--color-blue)">UK</span> </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
             </button>
