--- a/quiz/templates/base.html
+++ b/quiz/templates/base.html
@@ -35,6 +35,6 @@
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
-    {{ questions_json|json_script:"flashcards-data" }}
+    <!-- {{ questions_json|json_script:"flashcards-data" }} -->
 </body>
 </html>
